--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -25,7 +25,13 @@ jobs:
 
       - run: dotnet build ${{ inputs.project-path }} --configuration Release --no-restore
 
-      - run: dotnet test --configuration Release --no-build
+      - name: Test (if exists)
+        run: |
+          if ls **/*Tests.csproj 1> /dev/null 2>&1; then
+            dotnet test --configuration Release --no-build
+          else
+            echo "No test project found."
+          fi
 
       - name: Pack
         if: startsWith(github.ref, 'refs/tags/v')
