--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -16,14 +16,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # IMPORTANT pour MinVer
 
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
 
-      - run: dotnet restore ${{ inputs.project-path }}
+      - name: Restore
+        run: dotnet restore ${{ inputs.project-path }}
 
-      - run: dotnet build ${{ inputs.project-path }} --configuration Release --no-restore
+      - name: Build
+        run: dotnet build ${{ inputs.project-path }} --configuration Release --no-restore
 
       - name: Test (if exists)
         run: |
@@ -39,7 +43,6 @@ jobs:
           dotnet pack ${{ inputs.project-path }} \
             --configuration Release \
             --no-build \
-            -p:PackageVersion=${GITHUB_REF#refs/tags/v} \
             --output ./artifacts
 
       - name: Publish
@@ -49,3 +52,5 @@ jobs:
             --api-key ${{ secrets.NUGET_API_KEY }} \
             --source https://api.nuget.org/v3/index.json \
             --skip-duplicate
+
+
