--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: 10.0.x
 
       - name: Restore
         run: dotnet restore ${{ inputs.project-path }}
@@ -40,6 +40,9 @@ jobs:
       - name: Pack
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
+          echo "MinVer version detected:"
+          dotnet minver ${{ inputs.project-path }}        
+          
           dotnet pack ${{ inputs.project-path }} \
             --configuration Release \
             --no-build \
@@ -48,6 +51,7 @@ jobs:
       - name: Publish
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
+          echo "Publishing NuGet package..."
           dotnet nuget push ./artifacts/*.nupkg \
             --api-key ${{ secrets.NUGET_API_KEY }} \
             --source https://api.nuget.org/v3/index.json \
